samples/_failures_safe/1761429358_c2a9bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d33dba0.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7d33dba0.c:171:9: error: expected expression at end of input
  171 |         tokens[token_count].type =
      |         ^~~~~~
./samples/SAFE/__tmp_7d33dba0.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7d33dba0.c:171:9: error: expected declaration or statement at end of input
